syntax = "proto3";

import "trade/vo/OrderVo.proto";
option java_package = "com.huasheng.quant.open.sdk.protobuf.trade.response";
option java_outer_classname = "TradeQueryRealDeliverListResponseProto";
message TradeQueryRealDeliverListResponse {
	repeated OrderVo data = 1;
}
